force-app/main/default/objects/Insurance_Policy__c/Insurance_Policy__c.object-meta.xml
<CustomObject>
    <label>Insurance Submission</label>
    <nameField>
        <displayFormat>IP={0000000000}</displayFormat>
        <label>Insurance Policy</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Insurance Submission</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>