force-app/main/default/objects/Insurance_Policy__c/fields/Base_for_rate_calculation__c.field-meta.xml
<CustomField>
    <fullName>Base_for_rate_calculation__c</fullName>
    <inlineHelpText>Basis for rating (payroll, gross sales, square footage)</inlineHelpText>
    <label>Base for Rate Calculation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>