force-app/main/default/objects/Insurance_Policy__c/fields/Base_for_Rate_Calculation_CProp__c.field-meta.xml
<CustomField>
    <fullName>Base_for_Rate_Calculation_CProp__c</fullName>
    <label>Base for Rate Calculation CProp</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>