force-app/main/default/objects/Insurance_Policy__c/fields/Billing_Method__c.field-meta.xml
<CustomField>
    <fullName>Billing_Method__c</fullName>
    <label>Billing Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Direct Bill</fullName>
                <default>true</default>
                <label>Direct Bill</label>
            </value>
            <value>
                <fullName>Agency Bill</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>