force-app/main/default/objects/Insurance_Policy__c/fields/Bodily_Injury_per_accident__c.field-meta.xml
<CustomField>
    <fullName>Bodily_Injury_per_accident__c</fullName>
    <label>Bodily Injury per accident</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>