force-app/main/default/objects/Insurance_Policy__c/fields/Carrier__c.field-meta.xml
<CustomField>
    <fullName>Carrier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Carrier</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Carrier must be an insurance company</errorMessage>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>Insurance Company, Risk Retention Group</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipName>Insurance_Policy</relationshipName>
    <type>Lookup</type>
</CustomField>