force-app/main/default/objects/Insurance_Policy__c/fields/Carrier_NAIC_Number__c.field-meta.xml
<CustomField>
    <fullName>Carrier_NAIC_Number__c</fullName>
    <label>Carrier NAIC Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>