force-app/main/default/objects/Insurance_Policy__c/fields/Claims_Reported_Basis__c.field-meta.xml
<CustomField>
    <fullName>Claims_Reported_Basis__c</fullName>
    <label>Claims Reported Basis</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Claims Made</fullName>
            </value>
            <value>
                <fullName>Occurence</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>