force-app/main/default/objects/Insurance_Policy__c/fields/Damage_to_Rented_Property_Each_Occurenc__c.field-meta.xml
<CustomField>
    <fullName>Damage_to_Rented_Property_Each_Occurenc__c</fullName>
    <label>Damage to Rented Property (Each Occurenc</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>