force-app/main/default/objects/Insurance_Policy__c/fields/Deductible_Bodily_Injury__c.field-meta.xml
<CustomField>
    <fullName>Deductible_Bodily_Injury__c</fullName>
    <label>Deductible Bodily Injury</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>