force-app/main/default/objects/Insurance_Policy__c/fields/Deductible_Property_Damage__c.field-meta.xml
<CustomField>
    <fullName>Deductible_Property_Damage__c</fullName>
    <label>Deductible Property Damage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>