force-app/main/default/objects/Insurance_Policy__c/fields/Employee_Benefits__c.field-meta.xml
<CustomField>
    <fullName>Employee_Benefits__c</fullName>
    <label>Employee Benefits</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>