force-app/main/default/objects/Insurance_Policy__c/fields/Experience_Rating_Modifier__c.field-meta.xml
<CustomField>
    <fullName>Experience_Rating_Modifier__c</fullName>
    <defaultValue>1</defaultValue>
    <inlineHelpText>adjustment factor for WC rates</inlineHelpText>
    <label>Experience Rating Modifier</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>