force-app/main/default/objects/Insurance_Policy__c/fields/Exposure_Base__c.field-meta.xml
<CustomField>
    <fullName>Exposure_Base__c</fullName>
    <formula>text( START_Rating_Product__r.Exposure_Base__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Exposure Base</label>
    <type>Text</type>
</CustomField>