force-app/main/default/objects/Insurance_Policy__c/fields/General_Aggregate_Limit__c.field-meta.xml
<CustomField>
    <fullName>General_Aggregate_Limit__c</fullName>
    <label>General Aggregate Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>