force-app/main/default/objects/Insurance_Policy__c/fields/Insurance_Product_Selected__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Product_Selected__c</fullName>
    <formula>Insurance_Product__r.Carrier__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Insurance Product Selected</label>
    <type>Text</type>
</CustomField>