force-app/main/default/objects/Insurance_Policy__c/fields/Limit_Applies_Per__c.field-meta.xml
<CustomField>
    <fullName>Limit_Applies_Per__c</fullName>
    <label>Limit Applies Per</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Limit_Applies_Per</valueSetName>
    </valueSet>
</CustomField>