force-app/main/default/objects/Insurance_Policy__c/fields/Named_Insured__c.field-meta.xml
<CustomField>
    <fullName>Named_Insured__c</fullName>
    <formula>Insured_Contact__r.Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Named Insured</label>
    <type>Text</type>
</CustomField>