force-app/main/default/objects/Insurance_Policy__c/fields/Personal_Advertising_Injury__c.field-meta.xml
<CustomField>
    <fullName>Personal_Advertising_Injury__c</fullName>
    <label>Personal &amp; Advertising Injury</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>