force-app/main/default/objects/Insurance_Policy__c/fields/Policy_Number__c.field-meta.xml
<CustomField>
    <fullName>Policy_Number__c</fullName>
    <defaultValue>&quot;N2G-&quot;&amp;text($CustomMetadata.Configuration__mdt.Policy_Number.Policy_Number_Counter__c)</defaultValue>
    <label>Policy Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>