force-app/main/default/objects/Insurance_Policy__c/fields/Policy_Transaction__c.field-meta.xml
<CustomField>
    <fullName>Policy_Transaction__c</fullName>
    <label>Policy Transaction</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Policy_Status__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Policy_Transaction</valueSetName>
    </valueSet>
</CustomField>