force-app/main/default/objects/Insurance_Policy__c/fields/Premiums_CProp__c.field-meta.xml
<CustomField>
    <fullName>Premiums_CProp__c</fullName>
    <label>Premiums CProp</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>