force-app/main/default/objects/Insurance_Policy__c/fields/Premiums_PremisesOperations__c.field-meta.xml
<CustomField>
    <fullName>Premiums_PremisesOperations__c</fullName>
    <label>Premiums Premises/Operations</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>