force-app/main/default/objects/Insurance_Policy__c/fields/Producer__c.field-meta.xml
<CustomField>
    <fullName>Producer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Producer</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Producer must be agent or broker</errorMessage>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>Agency, Broker, Surplus Lines Broker, MGA</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipName>Insurance_Policy1</relationshipName>
    <type>Lookup</type>
</CustomField>