force-app/main/default/objects/Insurance_Policy__c/fields/Professional_Concentration__c.field-meta.xml
<CustomField>
    <fullName>Professional_Concentration__c</fullName>
    <label>Professional Concentration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Professional_Concentration</valueSetName>
    </valueSet>
</CustomField>