force-app/main/default/objects/Insurance_Policy__c/fields/Professional_Liability_Aggregate__c.field-meta.xml
<CustomField>
    <fullName>Professional_Liability_Aggregate__c</fullName>
    <label>Professional Liability Aggregate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>