force-app/main/default/objects/Insurance_Policy__c/fields/Program_Name__c.field-meta.xml
<CustomField>
    <fullName>Program_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program Name</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Program is not active</errorMessage>
        <filterItems>
            <field>Program_Name__c.Active__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Program_Name__c</referenceTo>
    <relationshipLabel>Insurance Submission</relationshipLabel>
    <relationshipName>Insurance_Submission</relationshipName>
    <type>Lookup</type>
</CustomField>