force-app/main/default/objects/Insurance_Policy__c/fields/Property_Damage_per_accident__c.field-meta.xml
<CustomField>
    <fullName>Property_Damage_per_accident__c</fullName>
    <label>Property Damage per accident</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>