force-app/main/default/objects/Insurance_Policy__c/fields/Rating_Source__c.field-meta.xml
<CustomField>
    <fullName>Rating_Source__c</fullName>
    <label>Rating Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Rating_Source</valueSetName>
    </valueSet>
</CustomField>