force-app/main/default/objects/Insurance_Policy__c/fields/Reported_Claims__c.field-meta.xml
<CustomField>
    <fullName>Reported_Claims__c</fullName>
    <label>Reported Claims</label>
    <summaryForeignKey>Insurance_Claim__c.Insurance_Policy__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>