force-app/main/default/objects/Insurance_Policy__c/fields/Show_Help__c.field-meta.xml
<CustomField>
    <fullName>Show_Help__c</fullName>
    <label>Show Help</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>