force-app/main/default/objects/Insurance_Policy__c/fields/START_Rating_Product__c.field-meta.xml
<CustomField>
    <fullName>START_Rating_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Select appropriate carrier product</inlineHelpText>
    <label>START Rating Product</label>
    <referenceTo>START_Rating_Tool__c</referenceTo>
    <relationshipLabel>Insurance Submission</relationshipLabel>
    <relationshipName>Insurance_Policy</relationshipName>
    <type>Lookup</type>
</CustomField>