force-app/main/default/objects/Insurance_Policy__c/fields/START_Rating_Tool_CAP__c.field-meta.xml
<CustomField>
    <fullName>START_Rating_Tool_CAP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>START Rating Tool CAP</label>
    <referenceTo>START_Rating_Tool__c</referenceTo>
    <relationshipLabel>Insurance Submission (START Rating Tool CAP)</relationshipLabel>
    <relationshipName>Insurance_Submission1</relationshipName>
    <type>Lookup</type>
</CustomField>