force-app/main/default/objects/Insurance_Policy__c/fields/START_Rating_Tool_Umb__c.field-meta.xml
<CustomField>
    <fullName>START_Rating_Tool_Umb__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>START Rating Tool Umb</label>
    <referenceTo>START_Rating_Tool__c</referenceTo>
    <relationshipLabel>Insurance Submission (START Rating Tool Umb)</relationshipLabel>
    <relationshipName>Insurance_Submission3</relationshipName>
    <type>Lookup</type>
</CustomField>