force-app/main/default/objects/Insurance_Policy__c/fields/START_Rating_Tool_WC__c.field-meta.xml
<CustomField>
    <fullName>START_Rating_Tool_WC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>START Rating Tool WC</label>
    <referenceTo>START_Rating_Tool__c</referenceTo>
    <relationshipLabel>Insurance Submission (START Rating Tool WC)</relationshipLabel>
    <relationshipName>Insurance_Submission2</relationshipName>
    <type>Lookup</type>
</CustomField>