force-app/main/default/objects/Insurance_Policy__c/fields/Subclass__c.field-meta.xml
<CustomField>
    <fullName>Subclass__c</fullName>
    <label>Subclass</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Major_Class__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Subclass</valueSetName>
    </valueSet>
</CustomField>