force-app/main/default/objects/Insurance_Policy__c/fields/Subject_Premium_Base__c.field-meta.xml
<CustomField>
    <fullName>Subject_Premium_Base__c</fullName>
    <formula>Base_for_rate_calculation__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Subject Premium Base</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>