force-app/main/default/objects/Insurance_Policy__c/fields/Total_Program_Premium__c.field-meta.xml
<CustomField>
    <fullName>Total_Program_Premium__c</fullName>
    <formula>Premiums_GL__c + Premiums_CAP__c + Premiums_WC__c + Premiums_Umb__c + Premiums_PL__c+ Premiums_CProp__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Program Premium</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>