force-app/main/default/objects/Insurance_Policy__c/fields/Total_Schedule_Premiums__c.field-meta.xml
<CustomField>
    <fullName>Total_Schedule_Premiums__c</fullName>
    <label>Total Schedule Premiums</label>
    <summarizedField>Census_Schedule__c.Premiums__c</summarizedField>
    <summaryForeignKey>Census_Schedule__c.Insurance_Policy__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>