force-app/main/default/objects/Insurance_Policy__c/fields/Umbrella_Limit__c.field-meta.xml
<CustomField>
    <fullName>Umbrella_Limit__c</fullName>
    <label>Umbrella Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>