force-app/main/default/objects/Insurance_Policy__c/fields/Underwriter__c.field-meta.xml
<CustomField>
    <fullName>Underwriter__c</fullName>
    <label>Underwriter</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Underwriter</valueSetName>
    </valueSet>
</CustomField>