force-app/main/default/objects/Insurance_Policy__c/fields/WC_EL_Disease_Policy_Limit__c.field-meta.xml
<CustomField>
    <fullName>WC_EL_Disease_Policy_Limit__c</fullName>
    <label>WC EL Disease Policy Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>