force-app/main/default/objects/Insurance_Policy__c/fields/WC_EL_Each_Accident__c.field-meta.xml
<CustomField>
    <fullName>WC_EL_Each_Accident__c</fullName>
    <label>WC EL Each Accident</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>