force-app/main/default/objects/Insurance_Policy__c/validationRules/Expiration_date_must_be_GTE_effective_da.validationRule-meta.xml
<ValidationRule>
    <fullName>Expiration_date_must_be_GTE_effective_da</fullName>
    <active>true</active>
    <errorConditionFormula>Expiration_Date__c &lt;  Effective_Date__c</errorConditionFormula>
    <errorDisplayField>Expiration_Date__c</errorDisplayField>
    <errorMessage>Expiration date must be greater than or equal to effective date</errorMessage>
</ValidationRule>