force-app/main/default/objects/Insurance_Policy__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Subclass__c</columns>
    <columns>Effective_Date__c</columns>
    <columns>Policy_Number__c</columns>
    <columns>Named_Insured__c</columns>
    <columns>Insured_Contact__c</columns>
    <columns>Policy_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>