force-app/main/default/objects/Insurance_Policy__c/listViews/START_Claims_Queue_Insurance_Policy.listView-meta.xml
<ListView>
    <fullName>START_Claims_Queue_Insurance_Policy</fullName>
    <columns>NAME</columns>
    <columns>Reported_Claims__c</columns>
    <columns>Carrier__c</columns>
    <columns>Insured_Contact__c</columns>
    <columns>Subclass__c</columns>
    <columns>State__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Reported_Claims__c</field>
        <operation>notEqual</operation>
        <value>0</value>
    </filters>
    <label>START Claims Queue</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>