force-app/main/default/objects/Insurance_Policy__c/listViews/START_Insurance_Policies.listView-meta.xml
<ListView>
    <fullName>START_Insurance_Policies</fullName>
    <columns>Carrier_Name__c</columns>
    <columns>START_Rating_Product__c</columns>
    <columns>Insured_Contact__c</columns>
    <columns>NAME</columns>
    <columns>Producer__c</columns>
    <columns>Subclass__c</columns>
    <columns>Premiums__c</columns>
    <filterScope>Everything</filterScope>
    <label>START Insurance Policies</label>
</ListView>