force-app/main/default/objects/Insurance_Policy__c/listViews/START_N2G_Insurance_Policies.listView-meta.xml
<ListView>
    <fullName>START_N2G_Insurance_Policies</fullName>
    <columns>NAME</columns>
    <columns>Policy_Status__c</columns>
    <columns>Named_Insured__c</columns>
    <columns>Insurance_Product__c</columns>
    <columns>Underwriter__c</columns>
    <columns>Carrier_Name__c</columns>
    <columns>Producer__c</columns>
    <columns>Premiums__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Producer__c</field>
        <operation>contains</operation>
        <value>N2G,AON</value>
    </filters>
    <label>START N2G Insurance Policies</label>
</ListView>