force-app/main/default/objects/Insurance_Policy__c/listViews/START_Scheduled_Insurance_Policies.listView-meta.xml
<ListView>
    <fullName>START_Scheduled_Insurance_Policies</fullName>
    <columns>NAME</columns>
    <columns>Named_Insured__c</columns>
    <columns>Insurance_Product__c</columns>
    <columns>Carrier_Name__c</columns>
    <columns>Producer__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Subclass__c</field>
        <operation>equals</operation>
        <value>Workers Compensation</value>
    </filters>
    <label>START  Scheduled Insurance Policies</label>
</ListView>